fixed spacing issue in home page

--- a/app/components/home1/NewsHome.module.css
+++ b/app/components/home1/NewsHome.module.css
@@ -5,6 +5,7 @@
   background-image: url("../../../public/home/news-bg.png");
   background-position: left top;
   background-repeat: no-repeat;
+  padding-top: 0;
 }
 .nhRow {
   display: flex;
