--- a/app/components/home1/President.module.css
+++ b/app/components/home1/President.module.css
@@ -2,6 +2,7 @@
   position: relative;
   padding: clamp(60px, 7vh, 7vh) 0;
   background-color: var(--color-white);
+  padding-bottom: 0;
 }
 .presidentRow {
   display: grid;
